# oss-pulse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: oss_pulse_pipeline.py
dbt/: dbt_project.yml
dbt/macros/: delta_source.sql  generate_schema_name.sql  is_bot.sql  register_external_sources.sql
dbt/metastore_db/: db.lck  service.properties
dbt/models/: sources.yml
dbt/seeds/: known_bots.csv
docs/: PROJECT_PLAN.md  index.html  schema_discovery.md  schema_discovery_raw_output.txt  schema_drift_evidence.md  schema_drift_evidence_raw.txt  video_demo_script.md
docs/adr/: 0001-payload-handling.md  0002-event-id-idempotency.md  0003-partition-by-ingest-hour.md  0004-no-surrogate-keys.md  0005-silver-build-strategy.md  0006-bot-identification.md  0007-bronze-storage-overhead.md  README.md
docs/marts/: gold_bot_vs_human_activity_mart.md  gold_oss_health_mart.md  gold_repo_daily_activity.md
docs/performance/: perf_bench.json  perf_vacuum.json  sprint5b_tuning.md
docs/postmortems/: 0001-schema-drift.md
docs/runbooks/: README.md  airflow_setup.md  backfill.md  cloud_apply_walkthrough.md  cloud_migration.md  data_missing.md  schema_change.md
docs/spikes/: bot_heuristic.md  (+1 more)
notebooks/: 01_schema_discovery.py  02_schema_drift_evidence.py
quality/: checks.py  runner.py
spark/: __init__.py  schemas.py
streaming/: README.md  consumer.py  docker-compose.yml  reconcile.py  replay.py
terraform/: .gitignore  README.md  iam.tf.disabled  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf  versions.tf
(+53 files in other folders)
