[project]
name = "oss-pulse"
version = "0.1.0"
description = "A production-grade GitHub activity lakehouse built on GH Archive."
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.15.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
