[project]
name = "oss-pulse"
version = "0.1.0"
description = "A production-grade GitHub activity lakehouse built on GH Archive."
requires-python = ">=3.11"
dependencies = [
    "apache-airflow==2.10.4",
    "dbt-core==1.9.2",
    "dbt-spark[pyhive]==1.9.2",
    "delta-spark==3.2.1",
    "ipython>=9.15.0",
    "kafka-python>=3.0.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyspark==3.5.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
